# pynemail

./: ChangeLog  README.md  setup.cfg  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
docs/source/: modules.rst  pynemail.rst  pynemail.ui.rst
pynemail/: email.py  imapclient.py  maildirclient.py  main.py
pynemail/ui/: __init__.py  app.py  detailpage.py  emailmenu.py  file_dialog.py  inboxpage.py  page.py  utils.py  widget.py
tests/: test_utils.py
