[metadata]
name = pynemail
author = Christian Boelsen
author_email = christianboelsen+github@gmail.com
summary = A simple terminal mail reader
description-file = README.md
home-page = https://github.com/cboelsen/pynemail
license = GPLv3
keywords = email, client, mail, MUA, curses
install_requires = [urwid],
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Console :: Curses
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Communications :: Email :: Email Clients (MUA)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    pynemail

[entry_points]
console_scripts =
    pynemail = pynemail.main:main

[wheel]
universal = 1
